# muchsyncrs

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/muchsyncrs/: Cargo.toml
crates/muchsyncrs-protocol/: Cargo.toml  README.md
crates/muchsyncrs-protocol/src/: error.rs  lib.rs  session.rs  transport.rs  util.rs
crates/muchsyncrs-protocol/src/flow/: error.rs  mod.rs  ping.rs  status.rs
crates/muchsyncrs-protocol/src/operation/: error.rs  mod.rs  ping.rs  status.rs
crates/muchsyncrs-protocol/src/serde/: mod.rs
crates/muchsyncrs-protocol/src/services/: router.rs
crates/muchsyncrs/src/src/: app.rs  config.rs  main.rs
nix/: treefmt.nix
src/: cli.rs  error.rs
