[package]
name = "muchsyncrs"
version = "0.0.0"
edition = "2021"

license = "MPL-2.0"
description = "synchronize notmuch databases"

[dependencies]
camino = { version = "1.1.10", features = ["serde1"] }
clap = { version = "4.5.39", features = ["color", "derive", "suggestions", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
futures = "0.3.31"
human-panic = "2.0.2"
miette = { version = "7.5.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt", "io-util", "fs", "sync"] }
tokio-util = "0.7.14"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xdg = "2.5.2"
