[package]
name = "muchsyncrs"
version = "0.0.0"
edition = "2021"

license = "MPL-2.0"
description = "synchronize notmuch databases"

[dependencies]
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.51", features = ["color", "derive", "suggestions", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
futures = "0.3.31"
human-panic = "2.0.3"
miette = { version = "7.5.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.0", features = ["macros", "rt", "io-util", "fs", "sync"] }
tokio-util = "0.7.16"
toml = "0.9.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xdg = "2.5.2"
