[package]
name = "muchsyncrs"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
camino = { workspace = true, features = ["serde1"] }
clap = { workspace = true, features = ["color", "derive", "suggestions", "wrap_help"] }
clap-verbosity-flag = { workspace = true, default-features = false, features = ["tracing"] }
futures.workspace = true
human-panic.workspace = true
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "io-util", "fs", "sync"] }
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
xdg.workspace = true
